# heap-allocator

./: CMakeLists.txt  LICENSE  README.md
include/: gc.h  heap.h  pool.h  strategy.h
src/: gc.c  heap.c  main.c  pool.c  strategy.c
